--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
         <!-- first div -->
         <div class="get-body-section-first-div">
           <h1 class="">
-            Get body in <br />
-            <span>shape</span> & stay <br />
-            healthy
+            Get body in
+            <span>shape</span> & stay healthy
           </h1>
           <p>
-            A huge selection of health and fitness content, healthy recipes
-            <br />
-            and transformation stories to help you get fit and stay fit!
+            A huge selection of health and fitness content, healthy recipes and
+            transformation stories to help you get fit and stay fit!
           </p>
           <button class="shared-btn-style">Join Club Now!</button>
           <button class="dowenload-btn">Download App</button>
         </div>
         <!-- second div -->
         <div class="get-body-section-second-div">
-          <img src="images/Images 2.png" alt="" />
+          <img src="images/Images.png" alt="" />
           <div>
             <div class="">
               <!-- 500 videos -->
@@ -47,7 +45,7 @@
               </div>
               <!-- 350 tutorial -->
               <div class="tutorial-350">
-                <div></div>
+                <div>😍</div>
                 <div>
                   <h1>350+</h1>
                   <p>Video tutorial</p>
@@ -58,7 +56,212 @@
         </div>
       </section>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <!-- change your habits -->
+      <section class="section-title">
+        <h1>Change Your Habits</h1>
+        <p>
+          we believe fitness should be accessinble to everyone, everywhere,
+          regardless of income or access to gym
+        </p>
+      </section>
+      <!-- habits items -->
+      <section class="display-flex habits-items">
+        <div class="habits-item">
+          <img src="images/image2.png" alt="" />
+          <h3>Movement</h3>
+          <p>We blieve fitness should be accessible to everyone</p>
+        </div>
+        <div class="habits-item">
+          <img src="images/image3.png" alt="" />
+          <h3>Time</h3>
+          <p>We blieve fitness should be accessible to everyone</p>
+        </div>
+        <div class="habits-item">
+          <img src="images/image4.png" alt="" />
+          <h3>Practice</h3>
+          <p>We blieve fitness should be accessible to everyone</p>
+        </div>
+        <div class="habits-item">
+          <img src="images/image5.png" alt="" />
+          <h3>Weight Loss</h3>
+          <p>We blieve fitness should be accessible to everyone</p>
+        </div>
+      </section>
+      <!-- Run an extra mile easily -->
+      <section class="display-flex run-an-extra-section">
+        <div class="run-an-extra-first-div">
+          <h1>
+            Run an Extra <br />
+            Mile easily
+          </h1>
+          <p>
+            We blieve fitness should be accessible to everyone , everywhere ,
+            regardless of income or access to a gym . With hundreds of
+            professional workouts.
+          </p>
+          <button class="shared-btn-style">Join Now</button>
+        </div>
+        <div class="run-an-extra-img-2nd-div">
+          <img src="images/run.jpg" alt="" />
+        </div>
+      </section>
+      <!-- BMI Calculator -->
+      <div class="section-title">
+        <h1>BMI Calculator</h1>
+        <p>
+          We belive fitness should be accessible to everyone , everywhere ,
+          regardless of income or access to a gym
+        </p>
+      </div>
+      <!-- bmi-calc-div -->
+      <div class="bmi-calc-div">
+        <section class="calc-section">
+          <div class="bmi-calculator-section">
+            <!-- bmi-calculator-chat -->
+            <div class="bmi-div">
+              <h1>BMI Calculator Chart</h1>
+              <table class="bmi-table">
+                <tr>
+                  <th>BMI</th>
+                  <th>Weight status</th>
+                </tr>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>Healthy</td>
+                </tr>
+                <tr>
+                  <td>25.5 - 35.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <tr>
+                  <td>30.0 - and above</td>
+                  <td>obese</td>
+                </tr>
+              </table>
+            </div>
+            <!-- Calculator your BMI -->
+            <div>
+              <h1>Calculator your BMI</h1>
+              <p>
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.
+              </p>
+              <div class="calculator-your-bmi">
+                <input
+                  class="item1"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Height/cm" />
+                <input
+                  class="item2"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="weight/kg" />
+                <input
+                  class="item3"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="age" />
+                <input
+                  class="item4"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Sex" />
+                <input
+                  class="item5"
+                  type="input"
+                  name=""
+                  id=""
+                  placeholder="Select an activity factor" />
+              </div>
+            </div>
+          </div>
+          <div class="calc-btn">
+            <button class="shared-btn-style">Calculetor</button>
+          </div>
+        </section>
+      </div>
+      <!-- Meet Our Team -->
+      <div class="section-title">
+        <h1>Meet Our Team</h1>
+        <p>
+          We belive fitness should be accessible to everyone to everywhere,
+          regardless of income or access to a gym
+        </p>
+      </div>
+      <section class="meet-our-team-items">
+        <div class="meet-our-team-item meet-our-team-item-1">
+          <h1>Jerome Bell</h1>
+          <p>Trainer</p>
+        </div>
+        <div class="meet-our-team-item meet-our-team-item-2">
+          <h1>Cameron Williamson</h1>
+          <p>Trainer</p>
+        </div>
+        <div class="meet-our-team-item meet-our-team-item-3">
+          <h1>Darrell Steward</h1>
+          <p>Trainer</p>
+        </div>
+        <div class="meet-our-team-item meet-our-team-item-4">
+          <h1>Dianne Russell</h1>
+          <p>Trainer</p>
+        </div>
+        <div class="meet-our-team-item meet-our-team-item-5">
+          <h1>Cody Fisher</h1>
+          <p>Trainer</p>
+        </div>
+        <div class="meet-our-team-item meet-our-team-item-6">
+          <h1>Theresa Webb</h1>
+          <p>Trainer</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <h1>Fitness</h1>
+        <p>
+          we believe fitness should be accessinble to everyone, everywhere,
+          regardless of income or access to gym.with hundreds of professional
+          workouts.
+        </p>
+      </div>
+
+      <div class="footer-2nd-div">
+        <h2>Get Started</h2>
+        <ul>
+          <li>Service</li>
+          <li>Contact Us</li>
+          <li>Affiliate Program</li>
+          <li>About</li>
+        </ul>
+      </div>
+      <div class="footer-3rd-div">
+        <h2>Get Started</h2>
+        <ul>
+          <li>Service</li>
+          <li>Contact Us</li>
+          <li>Affiliate Program</li>
+          <li>About</li>
+        </ul>
+      </div>
+    </footer>
+    <hr style="margin: 40px 0px" />
+    <p
+      style="
+        text-align: center;
+        margin: 20px 0px;
+        color: rgba(108, 108, 108, 0.778);
+      ">
+      copyright©2024 DecodeMax® All right reserved
+    </p>
   </body>
 </html>
