added my some work

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li>Contact</li>
           <li>About</li>
         </ul>
+        <img class="small-d-menu" src="images/menu.png" alt="" />
       </nav>
       <!-- header section -->
       <section class="display-flex get-body-section">
@@ -24,7 +25,7 @@
         <div class="get-body-section-first-div">
           <h1 class="">
             Get body in
-            <span>shape</span> & stay healthy
+            <strong class="shape">shape</strong> & stay healthy
           </h1>
           <p>
             A huge selection of health and fitness content, healthy recipes and
@@ -45,7 +46,7 @@
               </div>
               <!-- 350 tutorial -->
               <div class="tutorial-350">
-                <div>😍</div>
+                <div style="font-size: 35px">🔴</div>
                 <div>
                   <h1>350+</h1>
                   <p>Video tutorial</p>
@@ -254,7 +255,7 @@
         </ul>
       </div>
     </footer>
-    <hr style="margin: 40px 0px" />
+    <!-- <hr style="margin: 40px 0px; color: rgba(93, 93, 93, 0.605)" /> -->
     <p
       style="
         text-align: center;
